---
source: crates/compiler/codegen/tests/codegen_tests.rs
expression: snapshot_content
---
---
source: crates/compiler/codegen/tests/codegen_tests.rs
expression: codegen_output
---
Fixture: mutual_recursion.cm
============================================================
Source code:
fn main() -> felt {
    let n = 42;
    let even_result = is_even(n);
    let odd_result = is_odd(n);
    return even_result * 100 + odd_result;
}

fn is_even(n: felt) -> felt {
    if (n == 0) {
        return 1;
    }
    return is_odd(n - 1);
}

fn is_odd(n: felt) -> felt {
    if (n == 0) {
        return 0;
    }
    return is_even(n - 1);
}

============================================================
Generated CASM:
main:
   0: 9 42 5 _             // [fp + 5] = 42
   3: 10 7 22 _            // call is_even
   6: 4 5 0 8              // Arg 0 slot 0: [fp + 8] = [fp + 5] + 0
  10: 10 10 43 _           // call is_odd
  13: 6 6 100 3            // [fp + 3] = [fp + 6] op 100
  17: 0 3 9 -3             // [fp + -3] = [fp + 3] op [fp + 9]
  21: 11 _ _ _             // return
is_even:
is_even_0:
  22: 14 -4 9 _            // if [fp + -4] != 0 jmp rel is_even_2
  25: 12 27 _ _            // jump abs is_even_1
is_even_1:
  27: 9 1 -3 _             // Return value 0: [fp -3] = 1
  30: 11 _ _ _             // return
is_even_2:
  31: 5 -4 1 2             // [fp + 2] = [fp + -4] op 1
  35: 10 4 43 _            // call is_odd
  38: 4 3 0 -3             // Return value 0: [fp -3] = [fp + 3] + 0
  42: 11 _ _ _             // return
is_odd:
is_odd_0:
  43: 14 -4 9 _            // if [fp + -4] != 0 jmp rel is_odd_2
  46: 12 48 _ _            // jump abs is_odd_1
is_odd_1:
  48: 9 0 -3 _             // Return value 0: [fp -3] = 0
  51: 11 _ _ _             // return
is_odd_2:
  52: 5 -4 1 2             // [fp + 2] = [fp + -4] op 1
  56: 10 4 22 _            // call is_even
  59: 4 3 0 -3             // Return value 0: [fp -3] = [fp + 3] + 0
is_even:
  63: 11 _ _ _             // return
